@@ -1,3 +1,6 @@
+2009-03-10 Luke
+* add preview of consistency messages
+
 2009-02-02 Kazuhiko
 * add TemplateTool_deleteObsoleteTemplateList that removes all obsolete business templates.
 
